bugfix: 系统初始化和二分查找